--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,21 +2,21 @@
     <string name="app_name">Recorder</string>
 
     <string name="msg_recording">Recording in process…</string>
-    <string name="msg_saving">Saving the record…</string>
+    <string name="msg_stopping">Stopping…</string>
 
     <string name="msg_permissions_granted">All necessary permissions are granted.</string>
     <string name="msg_permissions_not_granted">Some permissions are not granted successfully.</string>
-    <string name="msg_schedule_early_end_time">Error: End time is earlier than start time.</string>
     <string name="msg_change_root_directory">Recording directory changed.</string>
 
-    <string name="phrase_on_air">On Air</string>
     <string name="phrase_grant_permissions">Grant permissions</string>
     <string name="phrase_daily_recording">Daily Recording</string>
     <string name="phrase_start_time">Start time</string>
     <string name="phrase_end_time">End time</string>
     <string name="phrase_change_folder">Change folder</string>
+    <string name="phrase_graph_update_period">Graph update period(ms)</string>
+    <string name="phrase_filename_pattern">Filename pattern</string>
 
-    <string name="word_timer">Timer</string>
+    <string name="word_settings">Settings</string>
     <string name="word_retry">Retry</string>
     <string name="word_period">Period</string>
     <string name="word_schedule">Schedule</string>
@@ -24,4 +24,5 @@
     <string name="word_browse">Browse</string>
     <string name="word_average">Average</string>
     <string name="word_max">Maximum</string>
+    <string name="word_duration">Duration</string>
 </resources>
