--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,4 +27,5 @@
     <string name="word_average">Average</string>
     <string name="word_max">Maximum</string>
     <string name="word_duration">Duration</string>
+    <string name="word_measure">Measure</string>
 </resources>
